--- a/first.html
+++ b/first.html
@@ -122,9 +122,10 @@
     <h3>Evolution of cricket bats</h3>
     <br>
     <br>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Historical_cricket_bat_art.jpg" alt="Evolution of bats">
-    
-    
+    <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Historical_cricket_bat_art.jpg"
+        alt="Evolution of bats">
+
+
 
 
 
